# AnyVid-AI

./: .gitignore  README.md
backend/: anyvidai.db  main.py  pyproject.toml  test.py
backend/app/alembic/versions/: 26c2a450ecf0_迁移脚本.py
backend/app/api/: __init__.py
backend/app/api/auth/: controller.py  crud.py  model.py  schema.py  service.py
backend/app/api/common/: controller.py  schema.py
backend/app/api/order/: crud.py  model.py  schema.py
backend/app/api/payment/: controller.py  schema.py  service.py
backend/app/api/summarize/: controller.py  schema.py  service.py
backend/app/common/: constant.py  enums.py  response.py
backend/app/config/: path_conf.py  setting.py
backend/app/core/: base_crud.py  base_model.py  database.py  dependencies.py  docs.py  logger.py  middlewares.py  security.py
backend/app/scripts/: init_app.py  initialize.py
backend/app/utils/: banner.py  common_util.py  console.py  douyin.py  downloader.py  hash_bcrpy_util.py  import_util.py  summarizer.py
backend/app/utils/cookies/: bilibili.txt  douyin.txt
backend/env/: .env.example
frontend/: index.html
frontend/public/: robots.txt  sitemap.xml
frontend/src/api/: auth.js
frontend/src/components/: AppFooter.vue  AppHeader.vue  ComparisonSection.vue  FeatureSection.vue  HowToSection.vue
